New update for my project

--- a/blocks/page.css
+++ b/blocks/page.css
@@ -9,8 +9,20 @@
   margin: 0 auto;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 763px) {
   .page {
     max-width: 320px;
+  }
+}
+
+@media screen and (min-width: 880px) and (max-width: 1330px) {
+  .page {
+    max-width: 880px;
+  }
+}
+
+@media screen and (min-width: 764px) and (max-width: 879px) {
+  .page {
+    max-width: 764px;
   }
 }
