--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -62,9 +62,14 @@
   height: 20px;
   border: none;
   background-color: #fcf5e5;
+  opacity: 0.4;
 }
 
-@media screen and (max-width: 320px) {
+.cards__card-like:hover {
+  opacity: 1;
+}
+
+@media screen and (max-width: 763px) {
   .cards {
     max-width: 288px;
     flex-direction: column;
@@ -92,5 +97,25 @@
   .cards__card-like {
     height: 18px;
     width: 20px;
+  }
+}
+
+@media screen and (min-width: 880px) and (max-width: 1330px) {
+  .cards {
+    max-width: 850px;
+  }
+
+  .cards__grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (min-width: 764px) and (max-width: 879px) {
+  .cards {
+    width: 700px;
+  }
+
+  .cards__grid {
+    grid-template-columns: repeat(1, 1fr);
   }
 }
