--- a/blocks/header.css
+++ b/blocks/header.css
@@ -33,23 +33,27 @@
   gap: 12px;
   margin: 0;
   padding: 0;
+  border: none;
 }
 
 .header__avatar-name {
   font-size: 32px;
   font-weight: 500;
-  line-height: 1;
+  height: 1;
   color: #212121;
   text-overflow: ellipsis;
   overflow: hidden;
   display: -webkit-box;
   line-clamp: 3;
   -webkit-box-orient: vertical;
+  border: none;
+  background-color: #fcf5e5;
+  max-width: 420px;
 }
 
 .header__avatar-description {
   font-size: 16px;
-  line-height: 1;
+  height: 1;
   font-weight: 500;
   opacity: 0.7;
   text-overflow: ellipsis;
@@ -57,19 +61,38 @@
   display: -webkit-box;
   line-clamp: 3;
   -webkit-box-orient: vertical;
+  border: none;
+  background-color: #fcf5e5;
+  max-width: 420px;
 }
 
 .header__avatar-edit {
   width: 107.34px;
-  height: 16px;
+  line-height: 1;
   opacity: 0.7px;
   padding: 0;
   border: none;
   background-color: #fcf5e5;
+  opacity: 0.7;
+  color: #212121;
+  text-align: center;
+  font-size: 16px;
+  display: flex;
+  text-indent: 2px;
 }
 
 .header__avatar-edit-image {
   height: 16px;
+  opacity: 0.7;
+}
+
+.header__avatar-edit-image:hover {
+  opacity: 1;
+}
+
+.header__avatar-edit:hover {
+  color: black;
+  opacity: 1;
 }
 
 .header__button {
@@ -86,16 +109,20 @@
   color: white;
 }
 
+.header__button:hover {
+  background-color: #212121cc;
+}
+
 .header__button-symbol {
   height: 12px;
   padding: 0 2px 0 0;
   text-align: center;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 763px) {
   .header {
     width: 288px;
-    height: 274px;
+    height: 316px;
     flex-direction: column;
     padding: 20px 0;
     justify-content: center;
@@ -103,10 +130,9 @@
   }
 
   .header__avatar-section {
-    text-align: center;
     flex-direction: column;
     max-width: 288px;
-    height: 134px;
+    height: 238px;
   }
 
   .header__avatar {
@@ -115,12 +141,18 @@
     margin: 0 auto;
   }
 
+  .header__avatar-bio-section {
+    height: 206px;
+  }
+
   .header__avatar-name {
     font-size: 20px;
+    text-align: center;
   }
 
   .header__avatar-description {
     font-size: 16px;
+    text-align: center;
   }
 
   .header__avatar-edit {
@@ -132,5 +164,17 @@
   .header__button {
     width: 288px;
     height: 52px;
+  }
+}
+
+@media screen and (min-width: 880px) and (max-width: 1330px) {
+  .header {
+    width: 850px;
+  }
+}
+
+@media screen and (min-width: 764px) and (max-width: 879px) {
+  .header {
+    width: 700px;
   }
 }
