--- a/blocks/menubar.css
+++ b/blocks/menubar.css
@@ -13,8 +13,20 @@
   width: 94px;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 763px) {
   .menubar {
     width: 320px;
+  }
+}
+
+@media screen and (min-width: 880px) and (max-width: 1330px) {
+  .menubar {
+    width: 880px;
+  }
+}
+
+@media screen and (min-width: 764px) and (max-width: 879px) {
+  .menubar {
+    max-width: 764px;
   }
 }
