--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,14 +1,5 @@
 .cards {
   max-width: 1280px;
-  display: flex;
-  justify-content: center;
-  margin: 0 auto;
-  padding: 20px 0 40px;
-  border-bottom: 1px solid #21212166;
-}
-
-.cards__grid {
-  max-width: 1280px;
   padding: 0;
   overflow: hide;
   display: grid;
@@ -21,7 +12,7 @@
 
 .cards__card {
   margin: 0;
-  height: 445px;
+  min-height: 445px;
   display: flex;
   position: relative;
   flex-direction: column;
@@ -42,7 +33,7 @@
 
 .cards__card-description {
   display: flex;
-  width: max-content;
+  max-width: 350px;
   margin: 0;
   font-family: "Poppins", "Times New Roman", serif;
   font-size: 20px;
@@ -55,6 +46,7 @@
 }
 
 .cards__card-like {
+  cursor: pointer;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -69,20 +61,30 @@
   opacity: 1;
 }
 
+@media screen and (max-width: 1330px) {
+  .cards {
+    grid-template-columns: repeat(2, 1fr);
+    margin: 0;
+  }
+}
+
+@media screen and (max-width: 879px) {
+  .cards {
+    grid-template-columns: repeat(1, 1fr);
+    margin: 0;
+  }
+}
+
 @media screen and (max-width: 763px) {
   .cards {
-    max-width: 288px;
-    flex-direction: column;
-  }
-
-  .cards__grid {
     grid-template-columns: repeat(1, 1fr);
     row-gap: 20px;
+    margin: 20px 0 0;
   }
 
   .cards__card {
     max-width: 288px;
-    height: 318px;
+    min-height: 318px;
   }
 
   .cards__card-image {
@@ -97,25 +99,5 @@
   .cards__card-like {
     height: 18px;
     width: 20px;
-  }
-}
-
-@media screen and (min-width: 880px) and (max-width: 1330px) {
-  .cards {
-    max-width: 850px;
-  }
-
-  .cards__grid {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-@media screen and (min-width: 764px) and (max-width: 879px) {
-  .cards {
-    width: 700px;
-  }
-
-  .cards__grid {
-    grid-template-columns: repeat(1, 1fr);
   }
 }
