--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -27,18 +27,18 @@
 .profile__avatar-name {
   font-size: 32px;
   font-weight: 500;
-  height: 1;
+  line-height: 1;
   color: #212121;
   text-overflow: ellipsis;
   overflow: hidden;
   display: -webkit-box;
-  line-clamp: 3;
+  -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   border: none;
   background-color: #fcf5e5;
   max-width: 420px;
   margin: 0;
-  padding-bottom: 12px;
+  margin-bottom: 12px;
 }
 
 .profile__avatar-description {
@@ -50,7 +50,7 @@
   text-overflow: ellipsis;
   overflow: hidden;
   display: -webkit-box;
-  line-clamp: 3;
+  -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   border: none;
   background-color: #fcf5e5;
@@ -113,18 +113,6 @@
   text-align: center;
 }
 
-@media screen and (max-width: 1330px) {
-  .profile {
-    width: 100%;
-  }
-}
-
-@media screen and (max-width: 879px) {
-  .profile {
-    width: 100%;
-  }
-}
-
 @media screen and (max-width: 763px) {
   .profile {
     width: 100%;
@@ -134,6 +122,7 @@
   }
 
   .profile__avatar-section {
+    gap: 12px;
     flex-direction: column;
     max-width: 288px;
     justify-content: none;
@@ -143,18 +132,17 @@
     height: 80px;
     width: 80px;
     margin: 0 auto;
-    padding-bottom: 12px;
   }
 
   .profile__avatar-bio-section {
     display: flex;
-    position: relative;
-    top: -20px;
+    margin-bottom: 20px;
   }
 
   .profile__avatar-name {
     font-size: 20px;
     text-align: center;
+    margin-bottom: 6px;
   }
 
   .profile__avatar-description {
