--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -65,14 +65,15 @@
 @media screen and (max-width: 1330px) {
   .cards {
     grid-template-columns: repeat(2, 1fr);
-    margin: 0;
   }
 }
 
 @media screen and (max-width: 879px) {
   .cards {
     grid-template-columns: repeat(1, 1fr);
-    margin: 0;
+    max-width: 413px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
