--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -11,7 +11,7 @@
   grid-auto-rows: 1fr;
 }
 
-.cards__card {
+.cards__item {
   margin: 0;
   min-height: 445px;
   display: flex;
@@ -19,20 +19,20 @@
   flex-direction: column;
 }
 
-.cards__card-image {
+.cards__image {
   width: 413px;
   height: 413px;
   object-fit: cover;
   border-radius: 8px;
 }
 
-.cards__card-comments {
+.cards__comments {
   display: flex;
   margin-top: auto;
   justify-content: space-between;
 }
 
-.cards__card-description {
+.cards__description {
   display: flex;
   max-width: 350px;
   margin: 0;
@@ -46,7 +46,7 @@
   overflow: hidden;
 }
 
-.cards__card-like {
+.cards__like {
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -58,7 +58,7 @@
   opacity: 0.4;
 }
 
-.cards__card-like:hover {
+.cards__like:hover {
   opacity: 1;
 }
 
@@ -84,21 +84,21 @@
     margin: 20px 0;
   }
 
-  .cards__card {
+  .cards__item {
     max-width: 288px;
     min-height: 318px;
   }
 
-  .cards__card-image {
+  .cards__image {
     width: 288px;
     height: 288px;
   }
 
-  .cards__card-description {
+  .cards__description {
     font-size: 16px;
   }
 
-  .cards__card-like {
+  .cards__like {
     height: 18px;
     width: 20px;
   }
