--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -9,42 +9,33 @@
   top: 0;
   font-family: "Poppins", "Times New Roman", serif;
   visibility: hidden;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .modal_opened {
   visibility: visible;
 }
 
-.modal__background {
-  width: 100%;
-  min-height: 100%;
-  display: flex;
-  position: absolute;
-  background-color: black;
-  opacity: 0.5;
-  position: fixed;
-  top: 0;
-}
-
 .modal__container {
   z-index: 3;
   display: flex;
+  flex-direction: column;
   background-color: white;
   position: relative;
-  justify-content: center;
-  width: 730px;
-  height: 408px;
+  gap: 32px;
+  max-width: 730px;
+  max-height: 408px;
   padding: 32px 50px 32px 50px;
   border-radius: 8px;
 }
 
 .modal__form {
   display: flex;
-  flex-direction: column;
-  gap: 32px;
+  position: relative;
 }
 
 .modal__title {
+  display: flex;
   font-size: 32px;
   font-weight: 500;
   line-height: 1;
@@ -56,22 +47,21 @@
   display: flex;
   flex-direction: column;
   width: 630px;
-  height: 272px;
-  gap: 32px;
   border: none;
   padding: 0px;
   margin: 0;
+  gap: 8px;
 }
 
-.modal__name-label {
+.fieldset__name-label {
   font-size: 16px;
   font-weight: 500;
   line-height: 1.1;
-  max-height: 1px;
+  max-height: 18px;
   color: #212121b2;
 }
 
-.modal__name {
+.fieldset__name {
   max-width: 630px;
   max-height: 52px;
   padding: 16px 12px 16px 12px;
@@ -82,22 +72,23 @@
   font-size: 20px;
   font-weight: 500;
   line-height: 1;
+  margin-bottom: 16px;
 }
 
-.modal__name:hover {
+.fieldset__name:hover {
   border: solid #212121 1px;
   cursor: pointer;
 }
 
-.modal__description-label {
+.fieldset__description-label {
   font-size: 16px;
   font-weight: 500;
   line-height: 1.1;
-  max-height: 1px;
+  max-height: 18px;
   color: #212121b2;
 }
 
-.modal__description {
+.fieldset__description {
   max-width: 630px;
   max-height: 52px;
   padding: 16px 12px 16px 12px;
@@ -108,14 +99,15 @@
   font-size: 20px;
   font-weight: 500;
   line-height: 1;
+  margin-bottom: 24px;
 }
 
-.modal__description:hover {
+.fieldset__description:hover {
   border: solid #212121 1px;
   cursor: pointer;
 }
 
-.modal__save {
+.fieldset__save {
   width: 156px;
   height: 52px;
   padding: 18px 32px 18px 32px;
@@ -130,7 +122,7 @@
   border: none;
 }
 
-.modal__save:hover {
+.fieldset__save:hover {
   background-color: #212121cc;
   cursor: pointer;
 }
@@ -138,14 +130,14 @@
 .modal__close {
   display: flex;
   position: absolute;
-  right: 100px;
+  top: 28px;
+  right: 50px;
   max-height: 40px;
   max-width: 40px;
-  justify-content: center;
-  align-items: center;
   background-color: white;
   border: none;
   opacity: 0.4;
+  padding: 0;
 }
 
 .modal__close:hover {
@@ -182,17 +174,17 @@
     gap: 24px;
   }
 
-  .modal__name {
+  .fieldset__name {
     max-width: 276px;
     max-height: 48px;
   }
 
-  .modal__description {
+  .fieldset__description {
     max-width: 276px;
     max-height: 48px;
   }
 
-  .modal__save {
+  .fieldset__save {
     width: 100%;
   }
 
