--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -53,7 +53,7 @@
   gap: 8px;
 }
 
-.fieldset__name-label {
+.modal__label {
   font-size: 16px;
   font-weight: 500;
   line-height: 1.1;
@@ -61,34 +61,7 @@
   color: #212121b2;
 }
 
-.fieldset__name {
-  max-width: 630px;
-  max-height: 52px;
-  padding: 16px 12px 16px 12px;
-  gap: 10px;
-  border-radius: 8px;
-  border: solid #21212166 1px;
-  color: #212121;
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 1;
-  margin-bottom: 16px;
-}
-
-.fieldset__name:hover {
-  border: solid #212121 1px;
-  cursor: pointer;
-}
-
-.fieldset__description-label {
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 1.1;
-  max-height: 18px;
-  color: #212121b2;
-}
-
-.fieldset__description {
+.modal__input {
   max-width: 630px;
   max-height: 52px;
   padding: 16px 12px 16px 12px;
@@ -102,12 +75,12 @@
   margin-bottom: 24px;
 }
 
-.fieldset__description:hover {
+.modal__input:hover {
   border: solid #212121 1px;
   cursor: pointer;
 }
 
-.fieldset__save {
+.modal__button {
   width: 156px;
   height: 52px;
   padding: 18px 32px 18px 32px;
@@ -122,7 +95,7 @@
   border: none;
 }
 
-.fieldset__save:hover {
+.modal__button:hover {
   background-color: #212121cc;
   cursor: pointer;
 }
@@ -147,21 +120,21 @@
 
 @media screen and (max-width: 879px) {
   .modal__container {
-    max-width: 654px;
+    max-width: 600px;
   }
 }
 
 @media screen and (max-width: 763px) {
   .modal__container {
-    max-width: 300px;
+    width: 276px;
     height: 336px;
-    padding: 12px 0px;
+    padding: 12px 12px;
     gap: 24px;
   }
 
   .modal__form {
     max-width: 276px;
-    gap: 20px;
+    gap: 24px;
   }
 
   .modal__title {
@@ -171,24 +144,20 @@
 
   .modal__fieldset {
     max-width: 276px;
-    gap: 24px;
   }
 
-  .fieldset__name {
+  .modal__input {
     max-width: 276px;
     max-height: 48px;
+    margin-bottom: 12px;
   }
 
-  .fieldset__description {
-    max-width: 276px;
-    max-height: 48px;
-  }
-
-  .fieldset__save {
+  .modal__button {
     width: 100%;
   }
 
   .modal__close {
-    right: 12px;
+    right: 8px;
+    top: 10px;
   }
 }
