--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,6 +1,9 @@
 .cards {
-  margin: 20px 0 40px;
   max-width: 1280px;
+}
+
+.cards__list {
+  margin: 20px 0 40px;
   padding: 0;
   overflow: hide;
   display: grid;
@@ -12,13 +15,13 @@
 }
 
 @media screen and (max-width: 1330px) {
-  .cards {
+  .cards__list {
     grid-template-columns: repeat(2, 1fr);
   }
 }
 
 @media screen and (max-width: 879px) {
-  .cards {
+  .cards__list {
     grid-template-columns: repeat(1, 1fr);
     max-width: 413px;
     margin-left: auto;
@@ -27,28 +30,9 @@
 }
 
 @media screen and (max-width: 763px) {
-  .cards {
+  .cards__list {
     grid-template-columns: repeat(1, 1fr);
     row-gap: 20px;
     margin: 20px 0;
-  }
-
-  .cards__item {
-    max-width: 288px;
-    min-height: 318px;
-  }
-
-  .cards__image {
-    width: 288px;
-    height: 288px;
-  }
-
-  .cards__description {
-    font-size: 16px;
-  }
-
-  .cards__like {
-    height: 18px;
-    width: 20px;
   }
 }
