--- a/blocks/card.css
+++ b/blocks/card.css
@@ -13,6 +13,10 @@
   border-radius: 8px;
 }
 
+.card__image:hover {
+  cursor: pointer;
+}
+
 .card__comments {
   display: flex;
   margin-top: auto;
@@ -36,17 +40,71 @@
 .card__like {
   cursor: pointer;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  background-repeat: no-repeat;
   width: 23px;
   height: 20px;
   border: none;
   background-color: #fcf5e5;
   opacity: 0.4;
+  background-image: url(../images/Like_Icon.svg);
+  background-position: center;
+  background-size: contain;
 }
 
 .card__like:hover {
   opacity: 1;
+}
+
+.card__liked {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 23px;
+  height: 20px;
+  border: none;
+  background-color: #fcf5e5;
+  background-image: url(../images/StateLiked.svg);
+  opacity: 1;
+}
+
+.card__liked:hover {
+  opacity: 0.5;
+}
+
+.card__delete {
+  cursor: pointer;
+  opacity: 1;
+  display: flex;
+  position: absolute;
+  background-image: url(../images/trashCanDefault.svg);
+  width: 32px;
+  height: 32px;
+  background-position: center;
+  top: 10px;
+  right: 10px;
+  border: none;
+  background-color: transparent;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.card__delete:hover {
+  opacity: 1;
+  display: flex;
+  position: absolute;
+  background-image: url(../images/trashCanHover.svg);
+  width: 32px;
+  height: 32px;
+  background-position: center;
+  top: 10px;
+  right: 10px;
+  border: none;
+  background-color: transparent;
+  background-size: contain;
+  background-repeat: no-repeat;
 }
 
 @media screen and (max-width: 763px) {
@@ -65,6 +123,11 @@
   }
 
   .card__like {
+    height: 18px;
+    width: 20px;
+  }
+
+  .card__liked {
     height: 18px;
     width: 20px;
   }
