--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -75,6 +75,10 @@
   margin-bottom: 24px;
 }
 
+.modal__input::placeholder {
+  opacity: 0.5;
+}
+
 .modal__input:hover {
   border: solid #212121 1px;
   cursor: pointer;
@@ -118,8 +122,74 @@
   cursor: pointer;
 }
 
+.modal__preview-caption {
+  display: flex;
+  position: absolute;
+  color: white;
+  background-color: #000;
+  border-radius: 8px;
+  text-align: center;
+  font-size: 20px;
+  font-family: "Poppins", "Times New Roman", serif;
+  line-height: 1.2;
+  bottom: -60px;
+  left: 0;
+  padding-top: 4px;
+  padding-right: 8px;
+  padding-bottom: 4px;
+  padding-left: 8px;
+  z-index: 3;
+}
+
+.modal__preview-image {
+  max-height: 80vh;
+  max-width: 80vw;
+  object-fit: contain;
+  border-radius: 8px;
+}
+
+.modal__preview-close {
+  display: flex;
+  position: absolute;
+  top: 0;
+  right: -48px;
+  max-height: 40px;
+  max-width: 40px;
+  background-color: transparent;
+  border: none;
+  opacity: 1;
+  padding: 0;
+}
+
+.modal__preview-close:hover {
+  opacity: 0.5;
+  cursor: pointer;
+}
+
+.modal__preview-container {
+  display: flex;
+  position: relative;
+  background-color: transparent;
+  padding: 0;
+  justify-content: center;
+  align-items: center;
+  max-height: 100%;
+  max-width: 100%;
+  align-self: center;
+}
+
+@media screen and (max-width: 1260px) {
+  .modal__preview-image {
+    max-width: 790px;
+  }
+}
+
 @media screen and (max-width: 879px) {
   .modal__container {
+    max-width: 600px;
+  }
+
+  .modal__preview-image {
     max-width: 600px;
   }
 }
@@ -159,5 +229,18 @@
   .modal__close {
     right: 8px;
     top: 10px;
+  }
+
+  .modal__preview-image {
+    max-width: 300px;
+  }
+
+  .modal__preview-close {
+    right: 0;
+    top: -40px;
+  }
+
+  .modal__preview-caption {
+    bottom: -20px;
   }
 }
