--- a/blocks/card.css
+++ b/blocks/card.css
@@ -24,8 +24,7 @@
 }
 
 .card__description {
-  display: flex;
-  max-width: 350px;
+  max-width: 250px;
   margin: 0;
   font-family: "Poppins", "Times New Roman", serif;
   font-size: 20px;
@@ -55,7 +54,7 @@
   opacity: 1;
 }
 
-.card__liked {
+.card__like_active {
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -70,7 +69,7 @@
   opacity: 1;
 }
 
-.card__liked:hover {
+.card__like_active:hover {
   opacity: 0.5;
 }
 
@@ -127,7 +126,7 @@
     width: 20px;
   }
 
-  .card__liked {
+  .card__like_active {
     height: 18px;
     width: 20px;
   }
