Deleted templates and moved code to HTML

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -65,7 +65,7 @@
   height: 20px;
   border: none;
   background-color: #fcf5e5;
-  background-image: url(../images/StateLiked.svg);
+  background-image: url(../images/likedButton.svg);
   opacity: 1;
 }
 
