--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -25,9 +25,9 @@
   flex-direction: column;
   background-color: white;
   position: relative;
-  gap: 32px;
+  gap: 8px;
   max-width: 730px;
-  max-height: 408px;
+  max-height: 100%;
   padding: 32px 50px 32px 50px;
   border-radius: 8px;
 }
@@ -62,6 +62,7 @@
   line-height: 1.1;
   max-height: 18px;
   color: #212121b2;
+  margin-top: 24px;
 }
 
 .modal__input {
@@ -75,7 +76,16 @@
   font-size: 20px;
   font-weight: 500;
   line-height: 1;
-  margin-bottom: 24px;
+}
+
+.modal__input_type_error {
+  border: solid #ff000099 1px;
+}
+
+.modal__error {
+  display: block;
+  position: relative;
+  color: #ff0000b2;
 }
 
 .modal__input::placeholder {
@@ -100,11 +110,16 @@
   font-weight: 500;
   line-height: 1;
   border: none;
+  margin-top: 24px;
 }
 
 .modal__button:hover {
   background-color: #212121cc;
   cursor: pointer;
+}
+
+.modal__button_disabled {
+  opacity: 0.5;
 }
 
 .modal__close {
