--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -5,7 +5,7 @@
 .cards__list {
   margin: 20px 0 40px;
   padding: 0;
-  overflow: hide;
+  overflow: hidden;
   display: grid;
   box-sizing: border-box;
   column-gap: 20px;
