--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -2,7 +2,7 @@
   font-family: "Poppins", "Times New Roman", serif;
   padding: 60px 0;
   margin: 0 auto;
-  size: 16px;
+  font-size: 16px;
   line-height: 1;
   font-weight: 400;
   color: #212121b2;
